追加: ゲーム画面右上にLevel表示HUDを追加

--- a/サイト/tetris/index.html
+++ b/サイト/tetris/index.html
@@ -42,6 +42,8 @@
             <!-- キャンバスエリア -->
             <div class="canvas-container">
                 <canvas id="tetris" width="300" height="300"></canvas>
+                <!-- 画面内HUD: レベル表示 -->
+                <div id="canvas-level-display" class="hud-text">Level 1</div>
                 <div id="game-over" class="hidden">
                     <h2 class="glow-text">GAME OVER</h2>
                 </div>
