修正: faviconおよびApple Touch Icon（ホーム画面用アイコン）を全ページに設定

--- a/サイト/index.html
+++ b/サイト/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play Store - Enter</title>
+    <!-- Favicon / Apple Touch Icon -->
+    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="apple-touch-icon" href="icon.png">
+
     <meta name="description" content="A diverse collection of interactive neon-style browser games. Enter the room.">
     <link rel="stylesheet" href="landing.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
